# PyAlgoEngine

./: .buildinfo  .clang-format  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  algo_engine.apps.backtest.html  algo_engine.apps.demo.html  algo_engine.apps.html  algo_engine.apps.sim_input.html  algo_engine.backtest.html  algo_engine.base.c_market_data.html  algo_engine.base.c_market_data_buffer_supported.html  algo_engine.base.c_market_data_deprecated.html  algo_engine.base.html  algo_engine.base.native_market_data.html  algo_engine.engine.html  algo_engine.exchange_profile.html  algo_engine.html  algo_engine.monitor.html  algo_engine.profile.html  algo_engine.strategy.html  algo_engine.utils.html  apis.html  architecture.html  backtest.html  build.ps1  build.sh  build_nuitka.sh  engines.html  genindex.html  index.html  market_data.html  modules.html  nt_config.json  objects.inv  probe.py  py-modindex.html  (+9 more)
.doctrees/: algo_engine.apps.backtest.doctree  algo_engine.apps.demo.doctree  algo_engine.apps.doctree  algo_engine.apps.sim_input.doctree  algo_engine.backtest.doctree  algo_engine.base.c_market_data.doctree  algo_engine.base.c_market_data_buffer_supported.doctree  algo_engine.base.c_market_data_deprecated.doctree  algo_engine.base.doctree  algo_engine.base.native_market_data.doctree  algo_engine.doctree  algo_engine.engine.doctree  algo_engine.exchange_profile.doctree  algo_engine.monitor.doctree  algo_engine.profile.doctree  algo_engine.strategy.doctree  algo_engine.utils.doctree  apis.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree  usage.doctree
.github/workflows/: build-page-docs.yml  docs.yml  publish-nt-to-pypi.yml  publish-posix-to-pypi.yml  publish-to-pypi.yml
AlgoEngine/: __init__.py
AlgoEngine/Engine/: AlgoEngine.py  EventEngine.py  MarketEngine.py  TradeEngine.py  __init__.py
AlgoEngine/Strategies/: BackTest.py  _StrategyEngine.py  __init__.py
AlgoEngine/back_test/: __init__.py  __main__.py  replay.py  sim_match.py
AlgoEngine/engine/: algo_engine.py  event_engine.py  market_engine.py  trade_engine.py
AlgoEngine/monitor/: __init__.py
AlgoEngine/strategie/: __init__.py  strategy_engine.py
_modules/: algo_engine.html  index.html
_modules/algo_engine/: apps.html  engine.html  profile.html  strategy.html
_sources/: algo_engine.apps.backtest.rst.txt  algo_engine.apps.demo.rst.txt  algo_engine.apps.rst.txt  algo_engine.apps.sim_input.rst.txt  algo_engine.backtest.rst.txt  algo_engine.base.c_market_data.rst.txt  algo_engine.base.c_market_data_buffer_supported.rst.txt  algo_engine.base.c_market_data_deprecated.rst.txt  algo_engine.base.native_market_data.rst.txt  algo_engine.base.rst.txt  algo_engine.engine.rst.txt  algo_engine.exchange_profile.rst.txt  algo_engine.monitor.rst.txt  algo_engine.profile.rst.txt  algo_engine.rst.txt  algo_engine.strategy.rst.txt  algo_engine.utils.rst.txt  index.rst.txt  setup.rst.txt  strategy.rst.txt  web_apps.rst.txt
_sources/api/: apps.rst.txt  backtest.rst.txt  exchange_profile.rst.txt  strategy.rst.txt
_static/: documentation_options.js
algo_engine/: __infra__.pxd  __init__.py
algo_engine/apps/: __init__.py  bokeh_server.py
algo_engine/back_test/: __init__.py  __main__.py  replay.py  sim_match.py
algo_engine/backtest/: __init__.py  __main__.py  metrics.py  replay.py  sim_match.py
algo_engine/base/: __infra__.pxd  __init__.py  c_allocator_protocol.h  c_allocator_protocol.pxd  c_allocator_protocol.pyi  c_allocator_protocol.pyx  c_heap_allocator.h  c_heap_allocator.pxd  c_heap_allocator.pyi  c_heap_allocator.pyx  c_intern_string.h  c_intern_string.pxd  c_intern_string.pyi  c_intern_string.pyx  c_market_data.pxd  c_shm_allocator.h  c_shm_allocator.pxd  c_shm_allocator.pyi  c_shm_allocator.pyx  candlestick.c  candlestick.pxd  candlestick.pyi  candlestick.pyx  console_utils.py  finance_decimal.py  market_buffer.py  market_data.c  market_data.h  market_data.pxd  market_data.pyi  market_data.pyx  market_data_buffer.c  market_data_buffer.pxd  market_data_buffer.pyi  market_data_buffer.pyx  market_data_external.c  market_data_wrapper.py  market_utils.py  market_utils_ctypes.py  market_utils_nt.py  (+17 more)
algo_engine/engine/: __infra__.pxd  __init__.pxd  __init__.py  algo_engine.py  c_event_engine.pxd  c_event_engine.pyi  c_event_engine.pyx  c_market_engine.pxd  c_market_engine.pyi  c_market_engine.pyx  event_engine.py  market_engine.py  trade_engine.py
api/: apps.html  backtest.html  base.html  engine.html  exchange_profile.html  index.html  monitor.html  strategy.html  utils.html
docs/: update_docs.sh
test/: buffer_test.py  demo.py  market_data_test.py  profile_test.py  simmatch_test.py  test_c_heap_allocator.py  test_c_intern_string.py  test_c_shm_allocator.py
(+230 files in other folders)
