[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAlgoEngine"
dynamic = ["version"]
description = "Basic algo engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Han Bolun", email = "Bolun.Han@outlook.com" }]
license = { text = "MIT" }  # Or your actual license
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "exchange_calendars",
    "PyEventEngine",
    "cython"
]

[project.optional-dependencies]
WebApps = ["flask", "waitress", "bokeh"]
Docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[project.urls]
Homepage = "https://github.com/BolunHan/PyAlgoEngine"
Repository = "https://github.com/BolunHan/PyAlgoEngine"
Issues = "https://github.com/BolunHan/PyAlgoEngine/issues"

[tool.setuptools]
ext-modules = [
    { name = "algo_engine.base.c_market_data.c_market_data", sources = ["algo_engine/base/c_market_data/c_market_data.pyx"]},
    { name = "algo_engine.base.c_market_data.c_transaction", sources = ["algo_engine/base/c_market_data/c_transaction.pyx"]},
    { name = "algo_engine.base.c_market_data.c_candlestick", sources = ["algo_engine/base/c_market_data/c_candlestick.pyx"]},
    { name = "algo_engine.base.c_market_data.c_tick", sources = ["algo_engine/base/c_market_data/c_tick.pyx"]},
    { name = "algo_engine.base.c_market_data.c_market_data_buffer", sources = ["algo_engine/base/c_market_data/c_market_data_buffer.pyx"]},
    { name = "algo_engine.base.c_market_data.c_trade_utils", sources = ["algo_engine/base/c_market_data/c_trade_utils.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.market_data", sources = ["algo_engine/base/c_market_data_buffer_supported/market_data.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.transaction", sources = ["algo_engine/base/c_market_data_buffer_supported/transaction.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.candlestick", sources = ["algo_engine/base/c_market_data_buffer_supported/candlestick.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.tick", sources = ["algo_engine/base/c_market_data_buffer_supported/tick.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.market_data_buffer", sources = ["algo_engine/base/c_market_data_buffer_supported/market_data_buffer.pyx"]},
#    { name = "algo_engine.base.c_market_data_buffer_supported.trade_utils", sources = ["algo_engine/base/c_market_data_buffer_supported/trade_utils.pyx"]},
]

[tool.setuptools.packages.find]
exclude = [
    "algo_engine.base.native_market_data",
    "algo_engine.base.c_market_data_buffer_supported",
]

[tool.setuptools.dynamic]
version = { attr = "algo_engine.__version__" }